# test_stand_frontend

./: ..gitignore.un~  .gitconfig  .gitignore  .gitmodules  .midas.sh.un~  .myAnalyser.py.un~  .run.sh.un~  .test.sh.un~  CMakeLists.txt  NETWORK.md  README  README.md  SP.sh  activate.sh.in  arduino_interface.sh.in  create_setpoint.sh  create_setpoint.sh.in  initiate_power_supply.sh.in  kill.sh  make_links.sh.in  midas.sh  myAnalyser.py  notes.md  run.sh  set_env.sh.in  setpoint.sh  setup_feb.sh.in  setup_mhttpd.sh.in  setup_odb.sh.in  sleeptest.cpp  source  start_daq.sh.in  test_stand_frontend.sh
backend_pc/midas_fe/clock_control/: CMakeLists.txt  clock_and_reset_history_panels_odb.h  crfe.cpp  defaultfebnames192.h  zeros192.h
backend_pc/midas_fe/environment_control/: CMakeLists.txt  environment_control.cpp  mscbhv.h  sc_fe_pixelTemps.cxx  sc_fe_sensinmagnet.cxx
backend_pc/midas_fe/febcrate_control/: CMakeLists.txt  febcratefe.cpp
backend_pc/midas_fe/hv_control/: CMakeLists.txt
backend_pc/midas_fe/network_control/: CMakeLists.txt  copyHostnames.cpp  netfe.cpp
backend_pc/midas_fe/power_control/: .gitignore  CMakeLists.txt  GenesysDriver.cpp  GenesysDriver.h  HMP4040Driver.cpp  HMP4040Driver.h  Keithley2450Driver.cpp  Keithley2450Driver.h  Keithley2611BDriver.cpp  Keithley2611BDriver.h  PowerDriver.cpp  PowerDriver.h  TCPClient.cpp  TCPClient.h  power.cpp  power_testbench.cpp
backend_pc/midas_fe/raspberrypi/: CMakeLists.txt  README.md  rpi.html  rpi_led.cpp  rpi_led.h  rpi_temp.cpp  rpi_temp.h  scfe.cpp  ucfe.cpp
backend_pc/software/clockcontrol/: CMakeLists.txt
common/kerneldriver/: .gitignore  99-mudaq.rules  CMakeLists.txt  Kbuild  Makefile  compactify.sh  load.sh  load_mudaq.sh  mudaq.c  mudaq.h  mudaq_fops.h  recover_pcie.sh  unload_mudaq.sh
common/kerneldriver/unige/: recover_pcie.sh  save_config.sh
common/libmudaq/: .md  CMakeLists.txt  MuFEB.cpp  MuFEB.h  asic_config_base.cpp  asic_config_base.h  mudaq_circular_buffer.hpp  mudaq_device.cpp  mudaq_device.h  mudaq_device_scifi.cpp  mudaq_device_scifi.h  mudaq_device_tile.cpp  mudaq_dummy.cpp  mudaq_dummy.h  utils.hpp
common/libmupix/: CMakeLists.txt
common/libmupix/include/: mupix_FEB.h  mupix_MIDAS_config.h  mupix_config.h  mupix_midasodb.h
common/libmupix/src/: mupix_FEB.cpp  mupix_config.cpp  mupix_midasodb.cpp
common/libmutrig/: CMakeLists.txt
common/libmutrig/include/: MutrigConfig.h  Mutrig_FEB.h  SciFi_FEB.h  SciFi_FEB_registers.h  Tiles_FEB.h  mutrig_MIDAS_config.h  mutrig_config.h  mutrig_config_new.h  mutrig_midasodb.h
common/libmutrig/src/: MutrigConfig.cpp  Mutrig_FEB.cpp  SciFi_FEB.cpp  Tiles_FEB.cpp  mutrig_MIDAS_config.cpp  mutrig_config.cpp  mutrig_config_new.cpp  mutrig_device.cpp  mutrig_midasodb.cpp
common/tests/: CMakeLists.txt  config_mupix.cpp  config_mutrig.cpp  config_mutrig_new.cpp  test_mudaq_device.cpp  test_odb.cpp
common/tests/vhdl_tests/: json_to_html.py  run_tests.sh
common/utils/flashprog/: CMakeLists.txt  main.cpp
farm_pc/midas_fe/: CMakeLists.txt  data_loss.npy  data_loss_2.npy  dma_speed_test.cu  dmatest.cu  experim.h  farm_fe.cpp  farm_fe.cu  farm_fe_0.inc  farm_fe_1.inc  gpu_fe.cpp  gpu_variables.h  miss_counts.npy  miss_counts_2.npy  miss_counts_half.npy  miss_counts_half_2.npy  plot_speed.py  rate.npy  rate_half.npy  rate_half_total.npy  rate_half_total_2.npy  rate_total.npy  rate_total_2.npy  read_dma.py  ro_swb_fe.cpp  run_all.py  speed_test.py
farm_pc/tools/: #gpu_dmatest.cu#  CMakeLists.txt  check_sorter.py  ddr3_test.cpp  dma_speed_test.cpp  dma_speed_test.cu  dmatest.cpp  dmatest.cu  dmatest_old.cu  gpu_dmatest.cu  gpu_test  gpu_test.cu  plot_speed.py  read_dma.py  readout_test.cpp  reset_link_a10_test.cpp  rw.cpp  swb_dmatest.cpp  swb_dmatest.cu  timer.cpp  timer.hpp
frontends/common/mudaq/: CMakeLists.txt  mudaq_device.cpp
modules/: CMakeLists.txt
online/: .FE.cpp.un~  .LOGGER_HISTORY_EVENTS.TXT  .ODB.SHM  .SHM_HOST.TXT  .SHM_TYPE.TXT  .exptab.un~  .gitignore  220617.hst  220617.idf  220617.idx  CMakeLists.txt  FE.cpp  arduino-station.h  clean.sh  exptab  killdaq.sh  last.json  myAnalyser.cpp  myAnalyser.py  teststand-frontend.cpp
online/pixels/operation/: .gitignore  loop_runs.msl  mask_all_FEB_links.msl  mask_links_unmaskable_pixels.sh  mask_single_link.py  produce_msl_from_run_odb.py  run_stability.msl  set_all_alwaysenable.msl  set_all_biasblock_on.msl  set_all_tdac.msl  set_all_threshold_low.msl  set_all_vpdac.msl  set_hv_down.msl  setup_odb_links.msl  turn_off_vertex.msl  turn_on_vertex.msl  ummask_single_link.py  update_DACs_from_QC_fixed.msl
online/pixels/qctest/: .gitignore
online/scifi/: all_off_odb.sh  pll_test_odb.sh  setup_odb.sh  start_DAQ.sh
online/scifi/gui_configs/: README.md  all_off.conf  pll_test.conf  prbs_single.conf
online/scifi/odb_snippets/: README.md  all_off.json  mutrig2_HighTTh.json  mutrig2_long_mode.json  pll_test.json  prbs_single.json
online/scifi/shell_odb_scripts_SLOW/: README.md  all_off_odb.sh  highTThr_odb.sh  pll_test_odb.sh  setup_odb.sh
online/scifi/threshold_scan/: plot_rateVStth.py  scan_TTh.msl  scan_TTh.xml  threshold_tune.py  (+1 more)
switching_pc/midas_fe/: CMakeLists.txt  CentralSwitchingBoard.h  CentralSwitchingBoard.inc  FEBrw_slow_fe.cpp  OneSwitchingBoard.h  OneSwitchingBoard.inc  generate_tdac_test.cpp  mudaq_frontend.cu  odb_cosmic_run_scifi_2022.inc  odb_feb_mapping_cosmic_run_2022.inc  odb_feb_mapping_edm_run_2021.h  odb_feb_mapping_integration_run_2021.h  read_tdac_test.cpp  ro_swb_fe.cpp  ro_swb_fe_central.inc  switch_fe.cpp  test_sc.csv
switching_pc/midas_fe_Tile/: CMakeLists.txt  malibu_fe.cpp
switching_pc/midas_fe_pixels/: CMakeLists.txt  switch_fe.cpp
switching_pc/midas_fe_scifi/: CMakeLists.txt  switch_fe.cpp
switching_pc/slowcontrol/: .gitignore  .md  CMakeLists.txt  DummyFEBSlowcontrolInterface.cpp  DummyFEBSlowcontrolInterface.h  FEBSlowcontrolInterface.cpp  FEBSlowcontrolInterface.h  FEB_slowcontrol.cpp  FEB_slowcontrol.h  MuFEB.cpp  MuFEB.h  feb_constants.h  feb_constants.md  feblist.cpp  feblist.h  linkstatus.cpp  linkstatus.h  mappedfeb.cpp  mappedfeb.h
(+1777 files in other folders)
